[Settings] Create setting page (without settings)

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -144,6 +144,7 @@
     "login": "Connexion",
     "logout": "Déconnexion",
     "search": "Rechercher",
+    "settings": "Paramètres",
     "signup": "S'inscrire",
     "start": "Créer"
   },
