--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -144,6 +144,7 @@
     "login": "Log in",
     "logout": "Log out",
     "search": "Search",
+    "settings": "Settings",
     "signup": "Sign up",
     "start": "Start scripting"
   },
