--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -152,14 +152,7 @@
     "email": "Email",
     "email-invalid-error": "Email is invalid",
     "email-required-error": "Email is required",
-    "least-8-chars": "At least 8 characters",
-    "least-8-chars-error": "Password must be at least 8 characters long",
     "login": "Already have an account? Log in",
-    "password": "Password",
-    "password-confirm": "Confirm password",
-    "password-identical": "Passwords must be identical",
-    "password-identical-error": "Passwords do not match",
-    "password-required-error": "Password is required",
     "submit": "Sign up",
     "title": "Sign up",
     "username": "Username",
@@ -173,6 +166,12 @@
     "no-results": "No results found",
     "search": "Search",
     "title": "Search"
+  },
+  "settings": {
+    "title": "Settings",
+    "username": "Username",
+    "save": "Save",
+    "password": "Password"
   },
   "snackbar": {
     "close": "Close",
@@ -254,5 +253,18 @@
     "upload": "Upload to calculator",
     "version": "Version {version}",
     "views": "{count} views"
+  },
+  "forms": {
+    "password-field": {
+      "label": "Password",
+      "label-confirm": "Confirm password",
+      "hint": "At least 8 characters",
+      "hint-confirm": "Password must be identical",
+      "rules": {
+        "required": "Password is required",
+        "min-8-chars": "Password must be at least 8 characters long",
+        "identical": "Passwords does not match"
+      }
+    }
   }
 }
