[Settings] Rename Password to Change Password

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -181,7 +181,7 @@
     "title": "Search"
   },
   "settings": {
-    "password": "Password",
+    "password": "Change password",
     "save": "Save",
     "title": "Settings",
     "username": "Username"
