--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -181,7 +181,7 @@
     "title": "Rechercher"
   },
   "settings": {
-    "password": "Mot de passe",
+    "password": "Changer de mot de passe",
     "save": "Enregistrer",
     "title": "Paramètres",
     "username": "Nom d'utilisateur"
