[DeleteConfirm] Add an option to not show again

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -72,6 +72,7 @@
       "cancel": "Cancel",
       "delete": "Delete",
       "description": "Are you sure you want to delete {name}?",
+      "dont-show-again": "Don't show again",
       "title": "Delete {name}"
     },
     "device": "Calculator",
