--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -150,8 +150,8 @@
   "login": {
     "close": "Close",
     "error": "Invalid username or password",
+    "no-account": "Don't have an account?",
     "password": "Password",
-    "register": "Don't have an account? Sign up",
     "rules": {
       "password": {
         "required": "Password is required"
@@ -160,10 +160,10 @@
         "required": "Username is required"
       }
     },
+    "signup": "Sign up",
     "submit": "Log in",
     "title": "Log in",
-    "username": "Username",
-    "go-register-page": "Or register"
+    "username": "Username"
   },
   "navbar": {
     "calculator": "Calculator",
@@ -180,18 +180,18 @@
     "start": "Start scripting"
   },
   "register": {
+    "already-have-account": "Already have an account?",
     "email": "Email",
     "email-invalid-error": "Email is invalid",
     "email-required-error": "Email is required",
-    "login": "Already have an account? Log in",
+    "login": "Log in",
     "submit": "Sign up",
     "title": "Sign up",
     "username": "Username",
     "username-invalid-error": "Username is invalid",
     "username-pattern": "Username can only contain letters, numbers, {'@'}, + and -",
     "username-required-error": "Username is required",
-    "username-too-long-error": "Username is too long",
-    "go-login-page": "Or login"
+    "username-too-long-error": "Username is too long"
   },
   "search": {
     "load-more": "Load more",
